# TransVBA

./: .gitignore  FormatModule.bas  Mainmodule.bas  Typemodule.bas  UserForm1.frm  UserForm1.frx  build_exe.ps1  patch.diff  pyproject.toml  requirements.txt  tvba.py  tvba_config.py  tvba_controller.py  tvba_core_appendix.py  tvba_core_body.py  tvba_core_convert.py  tvba_core_cover.py  tvba_core_document.py  tvba_core_figure.py  tvba_core_normalize.py  tvba_core_numbering.py  tvba_core_oox.py  tvba_core_presidential.py  tvba_core_table.py  tvba_core_title.py  tvba_core_toc.py  tvba_core_validate.py  tvba_gui.py  tvba_logging.py  tvba_persistence.py  tvba_settings.py  tvba_templates.py  tvba_utils.py
.pytest-packages/pygments-2.20.0.dist-info/: RECORD
.pytest-packages/pytest-9.0.3.dist-info/: RECORD
.pytest-packages/pywin32-311.dist-info/: RECORD
analysis_outputs/: 100页文档_表格标题识别结果.md
docs/: _requirements_extracted.txt  capability-matrix.md  dev-setup.md  functional-gap-fix-plan.md  requirements-implementation-audit.md  transvba-refactor-plan.md  user-guide.docx  user-guide.md
templates/: dapeng_internal.json  general_spec.json
tests/: test_appendix.py  test_body.py  test_controller.py  test_convert.py  test_cover.py  test_document.py  test_e2e.py  test_figure.py  test_gui_bugs.py  test_normalize.py  test_numbering.py  test_oox.py  test_persistence.py  test_presidential.py  test_settings.py  test_table.py  test_templates.py  test_title.py  test_toc.py  test_utils.py  test_validate.py
tests/fixtures/: __init__.py  build_body_doc.py  build_figure_doc.py  (+5 more)
(+3 files in other folders)
