[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transvba"
version = "0.1.0"
description = "Word document formatting tool ported from VBA"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.2.0",
    "pywin32>=311",
    "lxml>=6.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "pyinstaller>=6.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
